{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 9,
  "lineage": "2118d068-b943-49ea-9601-17403390b91d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:867988502117:vpc/vpc-4a90c62d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-3fd4e757",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e39beb84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4a90c62d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-542af232",
            "owner_id": "867988502117",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:loadbalancer/app/terraform-asg-example/5b4399de679dd5f5",
            "arn_suffix": "app/terraform-asg-example/5b4399de679dd5f5",
            "dns_name": "terraform-asg-example-1940128492.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:loadbalancer/app/terraform-asg-example/5b4399de679dd5f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-08476a33941d2977f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00192767"
              },
              {
                "subnet_id": "subnet-493a1100"
              },
              {
                "subnet_id": "subnet-f70da4af"
              }
            ],
            "subnets": [
              "subnet-00192767",
              "subnet-493a1100",
              "subnet-f70da4af"
            ],
            "vpc_id": "vpc-4a90c62d",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:listener/app/terraform-asg-example/5b4399de679dd5f5/d99d08ab5aaf51d7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:listener/app/terraform-asg-example/5b4399de679dd5f5/d99d08ab5aaf51d7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:loadbalancer/app/terraform-asg-example/5b4399de679dd5f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:targetgroup/terraform-asg-example/481a1563dea8b039",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:listener-rule/app/terraform-asg-example/5b4399de679dd5f5/d99d08ab5aaf51d7/c4525e321d06062a",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:listener-rule/app/terraform-asg-example/5b4399de679dd5f5/d99d08ab5aaf51d7/c4525e321d06062a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:listener/app/terraform-asg-example/5b4399de679dd5f5/d99d08ab5aaf51d7",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:targetgroup/terraform-asg-example/481a1563dea8b039",
            "arn_suffix": "targetgroup/terraform-asg-example/481a1563dea8b039",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:867988502117:targetgroup/terraform-asg-example/481a1563dea8b039",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-asg-example",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-4a90c62d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:867988502117:security-group/sg-08476a33941d2977f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08476a33941d2977f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": null,
            "owner_id": "867988502117",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-4a90c62d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:867988502117:security-group/sg-044b48ab7585107c1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-044b48ab7585107c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": null,
            "owner_id": "867988502117",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-4a90c62d"
          }
        }
      ]
    }
  ]
}